More work on homepage, added filler text/fixed spacing, started work on sponsor page

--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -53,7 +53,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_278107b7e9cd8e64fd055c220_a785f8e453" tabindex="-1" value=""></div>
-    <div class="clear" id="button-container"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear" id="button-container"><input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
 </div>
