--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700,300|Squada+One);
+
 /**
  * Reset some basic elements
  */
@@ -81,6 +83,7 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
+    font-family: 'Squada One', cursive;
 }
 
 
