--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -223,7 +223,7 @@
 }
 
 .post-title {
-    font-size: 42px;
+    font-size: 48px;
     letter-spacing: -1px;
     line-height: 1;
 
@@ -262,14 +262,19 @@
 
 .main-header {
   text-align : center;
-  margin-bottom : 30px;
   h1 {
-    font-size : 50px;
+    font-size : 72px;
   }
 }
 
 .section-body {
-  margin-bottom : 50px;
+  margin-bottom : 30px
+}
+
+.events-list {
+  h3 {
+    margin-bottom: 0;
+  }
 }
 
 $team-circle-diameter: 220px;
@@ -317,7 +322,7 @@ $team-circle-diameter: 220px;
       position : absolute;
       left : 0;
       top : 0;
-      background : rgba(1,1,1,0.35);
+      background : rgba(1,1,1,0.38);
       color : #fdfdfd;
       transition : top ease-out 0.2s;
     }
