--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,13 +1,15 @@
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+	#mc_embed_signup{clear:left; font:19px Alegreya Sans,Helvetica,Arial,sans-serif; font-weight: 300}
   #button-container{text-align : center !important;}
   .half-width{
      float:left !important;
-     width:47% !important;
+     width:48% !important;
      clear:none !important;
    }
+	 #mc_embed_signup form {padding : 0}
+	#mc_embed_signup .mc-field-group{width: 98%}
   .half-width:first-child{margin-right:2%;}
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
