--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -2,6 +2,15 @@
 layout : default
 ---
 
+<style>
+
+  img {
+    float : left;
+    padding-right : 25px;
+  }
+
+</style>
+
 <h1 class="post-title">
     {{page.title}}
 </h1>
