--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -264,15 +264,40 @@
     }
 }
 
+.sponsors {
+  :nth-child(3) {
+    text-align: center;
+  }
+}
+
 .main-header {
   text-align : center;
   h1 {
-    font-size : 64px;
+    font-size : 60px;
   }
 }
 
 .section-body {
   margin-bottom : 30px
+}
+
+.card {
+  box-shadow: 0 2px 18px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  padding : 40px 60px;
+  margin-left: -30px;
+  margin-right: -30px;
+}
+
+#mc_embed_signup .button {
+  margin : 0 !important;
+}
+
+#mc_embed_signup .mc-field-group label {
+  font-weight: bolder;
+}
+
+#mc_embed_signup .mc-field-group.input-group label {
+  font-weight : 300;
 }
 
 .events-list {
