--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,9 +1,12 @@
 /**
  * Site header
  */
+
+$header-height : 66px;
+
 .site-header {
     border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
+    min-height: $header-height;
     background-color: #F6F6F6;
 
     // Positioning context for the mobile navigation icon
@@ -12,7 +15,7 @@
 
 .site-title {
     font-size: 26px;
-    line-height: 56px;
+    line-height: $header-height;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
@@ -25,8 +28,8 @@
 
 .site-nav {
     float: right;
-    line-height: 56px;
-    height: 56px;
+    line-height: $header-height;
+    height: $header-height;
 
     .menu-icon {
         display: none;
@@ -72,10 +75,10 @@
         position: absolute;
         top: 9px;
         right: 30px;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
+        background-color: #f6f6f6;
         border-radius: 5px;
         text-align: right;
+        height: inherit;
 
         .menu-icon {
             display: block;
@@ -83,7 +86,8 @@
             width: 36px;
             height: 26px;
             line-height: 0;
-            padding-top: 10px;
+            padding-top: 16px;
+            padding-bottom: 10px;
             text-align: center;
 
             > svg {
@@ -99,6 +103,11 @@
         .trigger {
             clear: both;
             display: none;
+            margin-bottom: 0;
+
+            li {
+              display: block;
+            }
         }
 
         &:hover .trigger {
@@ -283,6 +292,10 @@
 
 .card {
   box-shadow: 0 2px 18px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  transition: 0.3s ease;
+  &:hover {
+    box-shadow: 0 2px 20px rgba(0,0,0,0.34), 0 6px 6px rgba(0,0,0,0.28);
+  }
   padding : 40px 60px;
   margin-left: -30px;
   margin-right: -30px;
