--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -42,6 +42,7 @@ $header-height : 66px;
       position : absolute;
       margin-left : 0;
       background-color: #f6f6f6;
+      list-style: none;
     }
 
     .navbar-item {
@@ -56,7 +57,7 @@ $header-height : 66px;
           border: 1px solid $grey-color-light;
           border-top : 0;
           border-radius: 0 0 5px 5px;
-          padding : 0 10px;
+          padding : 0 15px;
         }
       }
     }
@@ -103,7 +104,7 @@ $header-height : 66px;
         .trigger {
             clear: both;
             display: none;
-            margin-bottom: 0;
+            margin: 0;
 
             li {
               display: block;
