--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/"><img style="height:66px" src="/resources/logo-light.svg"/></a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img style="height:66px" src="/resources/logo-web.png"/></a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
