Moved a lot of stuff off of the front page onto their own pages. Cleaned up a few of the team pages a bit. Changed contact information for sponsors. Added Robonar calendar to events page (rather than the old system that hadn't been updated since 2015).

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
           {% if page.inMenu %}
             <li class="navbar-item">
             {% if page.subtitles %}
-                <a class="page-link">{{page.title}}</a>
+                <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{page.title}}</a>
                 <ul class="submenu">
                   {% for subtitle in page.subtitles %}
                     <li class="submenu-item">
