--- a/_includes/hackathonHeader.html
+++ b/_includes/hackathonHeader.html
@@ -1,7 +1,7 @@
 <div class="logo logo--header">
-	<a href="{{ "/hackathon" | relative_url }}">
-		<img class="logo__desktop" src="{{ "./Pictures/hackathon/Logo/utraLogoWhite.png" | absolute_url }}" alt="UTRA"> 
-		<img class="logo__mobile" src="{{ "./Pictures/hackathon/Logo/utraLogoWhiteMobile.png" | absolute_url }}" alt="UTRA"> 
+	<a href="www.utra.ca/hackathon"">
+		<img class="logo__desktop" src="/Pictures/hackathon/Logo/utraLogoWhite.png"" alt="UTRA"> 
+		<img class="logo__mobile" src="/Pictures/hackathon/Logo/utraLogoWhiteMobile.png"" alt="UTRA"> 
 	</a>
 </div>
 
