Edited hackathon link

--- a/_includes/hackathonHeader.html
+++ b/_includes/hackathonHeader.html
@@ -1,5 +1,5 @@
 <div class="logo logo--header">
-	<a href="www.utra.ca/hackathon"">
+	<a href="{{"/hackathon" | absolute_url }}">
 		<img class="logo__desktop" src="/Pictures/hackathon/Logo/utraLogoWhite.png"" alt="UTRA"> 
 		<img class="logo__mobile" src="/Pictures/hackathon/Logo/utraLogoWhiteMobile.png"" alt="UTRA"> 
 	</a>
