--- a/css/hackathon.css
+++ b/css/hackathon.css
@@ -352,9 +352,11 @@ footer {
         padding: 5px 0 5px 0;
         transition: 0.2s color linear, 0.2s background-color linear; }
         .bannerImage .bannerImage__bannerImage__hackathonTextBlock .buttonBlock .buttonBlock__twoCol:hover {
-          color: black;
+          color: #45526B;
           background-color: white;
           cursor: pointer; }
+      .bannerImage .bannerImage__bannerImage__hackathonTextBlock .buttonBlock a {
+        text-decoration: none; }
   .bannerImage .bannerImage__overley {
     position: absolute;
     z-index: 1;
@@ -463,6 +465,9 @@ html, body {
   border: 0;
   font-family: 'Abel', sans-serif;
   font-style: normal; }
+
+h1, h2, h3, h4, h5, p {
+  color: #45526B; }
 
 .header--aboutActive .mainMenu .mainMenu__menuItem.mainMenu__menuItem--about a {
   color: white; }
@@ -697,6 +702,7 @@ html, body {
     .timeTable .timeTable__row .timetimeTable__timeHeader {
       order: 1;
       text-align: center;
+      width: 35.5px;
       padding: 20px 30px 20px 30px;
       transition: background-color 0.1s linear; }
       @media only screen and (max-width: 500px) {
@@ -884,8 +890,21 @@ html, body {
       margin-top: 0px; }
     .QandAFlexContainer .QandAFlexCol .QandA:last-child {
       margin-bottom: 0px; }
+    .QandAFlexContainer .QandAFlexCol .QandA .faq__answer .faq_answerLink {
+      text-decoration: underline;
+      color: #CD959A;
+      font-weight: 800; }
 
-.sponsorList {
+.onePagerSection--sponsors .onePagerSection__subtitle {
+  padding-top: 30px;
+  padding-bottom: 10px;
+  position: relative;
+  text-align: center;
+  font-size: 2em;
+  width: 100%; }
+  .onePagerSection--sponsors .onePagerSection__subtitle.onePagerSection__subtitle--sponsors {
+    padding-top: 35px; }
+.onePagerSection--sponsors .sponsorList {
   position: relative;
   display: inline-flex;
   justify-content: space-around;
@@ -897,31 +916,16 @@ html, body {
   margin-top: 10px;
   margin-left: 30px;
   margin-right: 30px; }
-  .sponsorList .sponsorList__img {
+  .onePagerSection--sponsors .sponsorList .sponsorList__img {
     position: relative;
     height: 100px;
-    margin: 20px; }
-    .sponsorList .sponsorList__img img {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 15px;
+    margin-right: 15px; }
+    .onePagerSection--sponsors .sponsorList .sponsorList__img img {
       height: 100%;
       opacity: 1; }
+    .onePagerSection--sponsors .sponsorList .sponsorList__img.sponsorList__img--utra {
+      height: 300px; }
 
-.sponsorList .sponsorList__img.sponsorList__img--utra{
-  height: 300px;
-}
-
-
-
-.buttonBlock a{
-  text-decoration: none;
-}
-
-section .sponsorList__subtitle{
-  font-size: 2em;
-  padding-top: 20px;
-  padding-bottom: 5px;
-}
-
-section .sponsorList__subtitle.sponsorList__subtitle--sponsor{
-  padding-top: 30px;
-}
-/*# sourceMappingURL=hackathon.css.map */
