updated hackathon sponsor section

--- a/css/hackathon.css
+++ b/css/hackathon.css
@@ -399,6 +399,35 @@ footer {
     font-size: 3em; }
   .shortBanner .shortBanner__content p {
     color: #45526B; }
+  .shortBanner .shortBanner__content .shortBanner__socialContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; }
+    .shortBanner .shortBanner__content .shortBanner__socialContainer .socialIconCircle {
+      border-radius: 50%;
+      width: 35px;
+      height: 35px;
+      background: #45526B;
+      position: relative;
+      margin-top: 15px;
+      margin-bottom: 5px;
+      margin-left: 5px;
+      margin-right: 5px;
+      cursor: pointer; }
+      .shortBanner .shortBanner__content .shortBanner__socialContainer .socialIconCircle:hover i {
+        color: #CD959A; }
+      .shortBanner .shortBanner__content .shortBanner__socialContainer .socialIconCircle a {
+        text-decoration: none; }
+      .shortBanner .shortBanner__content .shortBanner__socialContainer .socialIconCircle i {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        color: #F5F9Fc;
+        transition: color 0.2s linear; }
+        .shortBanner .shortBanner__content .shortBanner__socialContainer .socialIconCircle i.fa-facebook {
+          transform: translate(calc(-50% - 0px), calc(-50% - 0px)); }
+        .shortBanner .shortBanner__content .shortBanner__socialContainer .socialIconCircle i.fa-envelope {
+          transform: translate(calc(-50% + 1px), calc(-50% - 0px)); }
   .shortBanner.shortBanner--noPhoto {
     height: 25vh; }
 
@@ -638,6 +667,29 @@ h1, h2, h3, h4, h5, p {
       position: absolute;
       width: 100%;
       height: 100%; }
+      .locationFlexContainer .map #hackathonMaps .googleMapsPlaceName {
+        font-size: 14px;
+        font-weight: 500;
+        color: #333;
+        font-family: Roboto,Arial;
+        padding-bottom: 3px;
+        padding-top: 3px; }
+      .locationFlexContainer .map #hackathonMaps .googleMapsAddressText {
+        color: #333;
+        font-family: Roboto,Arial;
+        user-select: text;
+        font-size: 13px;
+        font-weight: 400;
+        padding-bottom: 2px; }
+      .locationFlexContainer .map #hackathonMaps .googleMapsLink {
+        color: #427fed;
+        user-select: text;
+        font-family: Roboto,Arial;
+        font-size: 13px; }
+        .locationFlexContainer .map #hackathonMaps .googleMapsLink:link {
+          text-decoration: none; }
+        .locationFlexContainer .map #hackathonMaps .googleMapsLink:hover {
+          text-decoration: underline; }
 
 .scheduleLegend {
   position: relative;
@@ -699,14 +751,14 @@ h1, h2, h3, h4, h5, p {
     display: flex;
     flex-direction: row;
     align-items: center; }
-    .timeTable .timeTable__row .timetimeTable__timeHeader {
+    .timeTable .timeTable__row .timeTable__timeHeader {
       order: 1;
       text-align: center;
-      width: 35.5px;
       padding: 20px 30px 20px 30px;
-      transition: background-color 0.1s linear; }
+      transition: background-color 0.1s linear;
+      width: 35.5px; }
       @media only screen and (max-width: 500px) {
-        .timeTable .timeTable__row .timetimeTable__timeHeader {
+        .timeTable .timeTable__row .timeTable__timeHeader {
           padding: 30px 15px 30px 15px; } }
     .timeTable .timeTable__row .timeTable__event {
       position: relative;
@@ -890,7 +942,7 @@ h1, h2, h3, h4, h5, p {
       margin-top: 0px; }
     .QandAFlexContainer .QandAFlexCol .QandA:last-child {
       margin-bottom: 0px; }
-    .QandAFlexContainer .QandAFlexCol .QandA .faq__answer .faq_answerLink {
+    .QandAFlexContainer .QandAFlexCol .QandA .faq__answer .faq__answerLink {
       text-decoration: underline;
       color: #CD959A;
       font-weight: 800; }
@@ -923,9 +975,79 @@ h1, h2, h3, h4, h5, p {
     margin-bottom: 30px;
     margin-left: 15px;
     margin-right: 15px; }
+    @media only screen and (max-width: 620px) {
+      .onePagerSection--sponsors .sponsorList .sponsorList__img {
+        height: 75px; } }
+    @media only screen and (max-width: 500px) {
+      .onePagerSection--sponsors .sponsorList .sponsorList__img {
+        height: 50px; } }
+    @media only screen and (max-width: 370px) {
+      .onePagerSection--sponsors .sponsorList .sponsorList__img {
+        height: 40px; } }
     .onePagerSection--sponsors .sponsorList .sponsorList__img img {
       height: 100%;
       opacity: 1; }
     .onePagerSection--sponsors .sponsorList .sponsorList__img.sponsorList__img--utra {
-      height: 300px; }
+      height: 400px; }
+      @media only screen and (max-width: 510px) {
+        .onePagerSection--sponsors .sponsorList .sponsorList__img.sponsorList__img--utra {
+          height: 350px; } }
+      @media only screen and (max-width: 400px) {
+        .onePagerSection--sponsors .sponsorList .sponsorList__img.sponsorList__img--utra {
+          height: 300px; } }
+      @media only screen and (max-width: 370px) {
+        .onePagerSection--sponsors .sponsorList .sponsorList__img.sponsorList__img--utra {
+          height: 280px; } }
+  .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img {
+    position: relative;
+    height: 250px;
+    margin-top: 30px;
+    margin-bottom: 60px;
+    margin-left: 15px;
+    margin-right: 15px; }
+    @media only screen and (max-width: 1220px) {
+      .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img {
+        height: 250px; } }
+    @media only screen and (max-width: 1080px) {
+      .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img {
+        height: 225px; }
+        .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img.sponsorList__img--leap {
+          height: 250px; } }
+    @media only screen and (max-width: 860px) {
+      .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img {
+        height: 200px; }
+        .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img.sponsorList__img--leap {
+          height: 225px; } }
+    @media only screen and (max-width: 770px) {
+      .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img {
+        height: 175px; }
+        .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img.sponsorList__img--leap {
+          height: 200px; } }
+    @media only screen and (max-width: 670px) {
+      .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img {
+        height: 150px;
+        margin-bottom: 30px; }
+        .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img.sponsorList__img--leap {
+          height: 175px; } }
+    @media only screen and (max-width: 580px) {
+      .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img {
+        height: 125px;
+        margin-bottom: 30px; }
+        .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img.sponsorList__img--leap {
+          height: 150px; } }
+    @media only screen and (max-width: 510px) {
+      .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img {
+        height: 100px;
+        margin-bottom: 30px; }
+        .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img.sponsorList__img--leap {
+          height: 125px; } }
+    @media only screen and (max-width: 400px) {
+      .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img {
+        height: 90px;
+        margin-bottom: 30px; }
+        .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img.sponsorList__img--leap {
+          height: 110px; } }
+    .onePagerSection--sponsors .sponsorList.sponsorList--bigLogos .sponsorList__img img {
+      height: 100%; }
 
+/*# sourceMappingURL=hackathon.css.map */
